src/modules/components/sprite-viewer/styles.css
sprite-viewer {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
  display: grid;
  grid-template-columns: 0 1fr 0;
  grid-template-rows: calc(100% - 56px) 56px;
  height: 100%;
  overflow: hidden;
}

.bouton-retour {
  justify-self: center;
  align-self: center;
  grid-row: 2;
  grid-column: 2;
}

form[name="switch-shiny-regular"] {
  grid-row: 2;
  grid-column: 2;
  width: fit-content;
  height: fit-content;
  justify-self: end;
  align-self: center;
  margin-right: 16px;
  display: grid;
  place-items: center;
}

sprite-viewer[shiny="false"] .sprite-list.shiny,
sprite-viewer[shiny="true"] .sprite-list.regular {
  display: none;
}

.sprite-viewer-dex-info {
  grid-row: 2;
  grid-column: 2;
  justify-self: start;
  align-self: center;
  margin-left: 16px;
  height: var(--height);
}

.info-dexid::before {
  content: '#';
  opacity: .7;
}

sprite-viewer a.icon-button.bouton-retour {
  margin: 0;
}

.sprite-scroller {
  grid-row: 1;
  grid-column: 1 / -1;
  overflow-y: auto;
  height: 100%;
  width: 100%;
  display: flex;
}

.sprite-list {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding-bottom: calc(56px + 2 * 16px);
}

.dex-sprite {
  --sprite-size: calc(min(200px, 45vw));
  display: grid;
  grid-template-rows: var(--sprite-size) min-content;
  width: var(--sprite-size);
  margin: 6px 5px;
}

.single-sprite .dex-sprite {
  --sprite-size: calc(min(400px, 80vw));
}
.two-sprites .dex-sprite {
  --sprite-size: calc(min(400px, 60vw));
}

.dex-sprite pokemon-sprite {
  width: 100%;
  height: auto;
  aspect-ratio: 1;
  --size: 100% !important;
}

.sprite-viewer-dex-info,
.forme-name {
  --padding-inline: 4px;
  padding: var(--padding-inline) calc(3 * var(--padding-inline));
  --height: 26px;
  border-radius: calc(.5 * var(--height));
  display: flex;
  justify-content: center;
  align-items: center;
  gap: calc(2.5 * var(--padding-inline));
  box-sizing: border-box;
}

.forme-name {
  min-width: 35px;
  max-width: calc(var(--sprite-size) - 10px);
  min-height: var(--height);
  margin: 7px auto 0;
  position: relative;
}

.forme-name.off {
  display: none;
}

.sprite-viewer-dex-info.caught,
.forme-name.caught {
  --surface-color: var(--secondary-container);
  --text-color: var(--on-secondary-container);
  padding-left: var(--padding-inline);
}

.sprite-viewer-dex-info.caught {
  padding-left: calc(3 * var(--padding-inline));
}

.sprite-viewer-dex-info > .icon,
.forme-name > .icon {
  margin: -7px;
}

.sprite-viewer-dex-info/*:not(.caught)*/ > .icon {
  display: none;
}

.forme-name-arrow {
  position: absolute;
  left: calc(50% - 7px);
  top: -6px;
  height: 7px;
  width: 14px;
  clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
  --surface-color: inherit;
  --text-color: inherit;
}

.dex-sprite > picture {
  position: relative;
  width: 100%;
  overflow: hidden;
}

picture.no-shiny > span {
  grid-row: 1;
  grid-column: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  margin: 0;
  padding-top: 20%;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: rgb(var(--surface), .8);
  text-transform: none;
  text-align: center;
}

@media (min-width: 1140px) {
  .dex-sprite,
  .single-sprite .dex-sprite,
  .two-sprites .dex-sprite {
    --sprite-size: calc(min(400px, 80vw));
  }
}

sprite-viewer[size="112"] :is(
  .dex-sprite,
  .single-sprite .dex-sprite,
  .two-sprites .dex-sprite
) {
  --sprite-size: 112px;
}

#sprite-viewer-fab {
  position: fixed;
  bottom: 56px;
  left: 50%;
  translate: -50%;
  margin-inline: 0;
}

